<resources>
    <string name="app_name">Event Planner</string>
    <string name="budget_role">Budget</string>
    <string name="add_payment">Add Payment</string>
    <string name="add_budget">Add Budget</string>
    <string name="edit_category">Edit Category</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_description">Enter Description</string>
    <string name="budget_btn_label">Budget Management</string>
    <string name="settings">Settings</string>
    <string name="best_format_question">Which format best represents the following number:\nThree thousand five hundred and twelve hundredths</string>
    <string name="eur_decimal">European Standard: 3.500,12</string>
    <string name="us_decimal">US Standard: 3,500.12</string>
    <string name="about_us">About us</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="balance">Balance:</string>
    <string name="budget_name">Budget Name</string>
    <string name="payments">Payments</string>
    <string name="graph">View Graph</string>
    <string name="list">View List</string>
    <string name="total_budget">Total Budget Amount:</string>
    <string name="total_paid">Total Amount Paid:</string>
    <string name="total_remaining">Total Amount Remain:</string>
    <string name="paypending">Payments Pending:</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="paid">Paid</string>
    <string name="paid_">Paid: </string>
    <string name="paymentStatus">Payment status</string>
    <string name="paid_date">Paid Date</string>
    <string name="category_error_txt">A Category with the same name already exists!</string>
    <string name="graph_summary">Total Budget:\nTotal Paid:\nPayments Pending:\nCurrent Balance:</string>
    <string-array name="default_categories">
        <item>Ceremony</item>
        <item>Jewelry</item>
        <item>Beauty</item>
        <item>Decor</item>
    </string-array>
    <!--Events-->
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="update_t">Update</string>
    <string name="task">Tasks</string>
    <!--Tasks-->
    <string name="edate">Edate</string>
    <string name="time">Time</string>
    <string name="ename">ename</string>
    <string name="enames">Enter the Event name</string>
    <string name="etime">time</string>
    <string name="edittime">editTime</string>
    <string name="editdate">editDate</string>
    <string name="eventName">Enter event name</string>
    <string name="event">Event List</string>
    <string name="taskk">Task List</string>
    <!--Guests and Companions -->
    <string name="dialog_message">Are you sure want to delete</string>
    <string name="toolbar_eventplan">Event Planner</string>
    <string name="toolbar_add_guest">Add Guests</string>
    <string name="toolbar_edit_guest">Edit Guests</string>
    <string name="toolbar_sum">Summary</string>
    <string name="textView_guest">Guests Details</string>
    <string name="textView_guest_contact">Contact Details</string>
    <string name="textView_companion">No of Companions</string>
    <string name="textView_taskguest">Tasks</string>
    <string name="textView_guest_invi">Guests Invitations</string>
    <string name="dialog_title">title</string>
    <string name="viewguest">Guests</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="child">Child</string>
    <string name="adult">Adult</string>
    <string name="invitation_sent">Invitation sent</string>
    <string name="Invitation_n_sent">Invitation not sent</string>
    <string name="phonenumber">Phone Number</string>
    <string name="email_g">Email</string>
    <string name="address_g">Address</string>
    <string name="name_g">Name</string>
    <string name="update_g">Update</string>
    <string name="pending_sum">Pending :</string>
    <string name="compl_sum">Completed :</string>
    <string name="paid_sum">Paid :</string>
    <string name="notsent">Not Sent :</string>
    <string name="sent">Sent :</string>
    <string name="add_companinos">Add Companion</string>
    <string name="companinos">Companions</string>
    <string name="com_details">Companion Details</string>
    <string name="com_note">Note</string>
    <string name="tbadd_com">Add Companions</string>
    <string name="total">Total - </string>
    <!--Vendors-->
    <string name="textView1">Details of Vendor</string>
    <string name="textview2">Contact Details</string>
    <string name="textView3">Payment Info</string>
    <string name="textview4">Payment</string>
    <string name="textview5">Payment</string>
    <string name="button1">SAVE AND EXIT</string>
    <string name="button2">Clear</string>
    <string name="toolbar">Add Vendor</string>
    <string name="title_activity_vendorview">Vendorview</string>

    <string name="about">About Us</string>
    <string name="con">Contact us</string>
</resources>