<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCategoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/editcat_menu"
        android:layout_width="411dp"
        android:layout_height="61dp"

        android:layout_marginBottom="1dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/listview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/edit_category" />

    <EditText
        android:id="@+id/cate_name"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/hint_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cate_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:onClick="handleClick"
        android:text="@string/save"
        app:layout_constraintStart_toEndOf="@+id/cate_del"
        app:layout_constraintTop_toBottomOf="@+id/cate_name" />

    <Button
        android:id="@+id/cate_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:onClick="handleClick"
        android:text="@string/delete"
        app:layout_constraintBaseline_toBaselineOf="@+id/cate_save"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/editcat_er_msg"
        android:layout_width="351dp"
        android:layout_height="25dp"
        android:text=" "
        app:layout_constraintBottom_toTopOf="@+id/cate_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cate_name" />
</androidx.constraintlayout.widget.ConstraintLayout>