<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BudgetPaymentsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/abb_menu"
        android:layout_width="409dp"
        android:layout_height="51dp"

        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/add_budget" />

    <TextView
        android:id="@+id/bp_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abb_menu" />

    <EditText
        android:id="@+id/bp_editText_name"
        android:layout_width="340dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bp_label_name" />

    <TextView
        android:id="@+id/bp_label_amt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/amount"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bp_editText_name" />

    <TextView
        android:id="@+id/bp_label_ps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/paymentStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bp_editText_amt" />

    <EditText
        android:id="@+id/bp_editText_amt"
        android:layout_width="334dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bp_label_amt" />

    <RadioGroup
        android:id="@+id/bp_rg_ps"
        android:layout_width="252dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bp_label_ps">

        <RadioButton
            android:id="@+id/bp_radio_pending"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:padding="6sp"
            android:text="@string/pending" />

        <RadioButton
            android:id="@+id/bp_radio_paid"
            android:layout_width="123dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:padding="6sp"
            android:text="@string/paid" />
    </RadioGroup>

    <TextView
        android:id="@+id/bp_label_paidDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/paid_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bp_rg_ps" />

    <EditText
        android:id="@+id/bp_editText_date"
        android:layout_width="331dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="none"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bp_label_paidDate" />

    <ImageButton
        android:id="@+id/bp_btn_save"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="#EDE3E3"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bp_editText_date"
        app:srcCompat="@drawable/ic_checked" />

    <ImageButton
        android:id="@+id/bp_btn_delete"
        android:layout_width="61dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bp_editText_date"
        app:srcCompat="@android:drawable/ic_delete" />


</androidx.constraintlayout.widget.ConstraintLayout>