<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGuest">


    <TextView
        android:id="@+id/tvAddCom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/companinos"
        android:textColor="@color/textColorBold"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ibtn_addcom"
        app:layout_constraintHorizontal_bias="0.763"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addguestbutton" />

    <ImageView
        android:id="@+id/ivEmail"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@color/purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPhone"
        app:srcCompat="@android:drawable/sym_action_email" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email_g"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivEmail"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />

    <View
        android:id="@+id/divider02"
        android:layout_width="385dp"
        android:layout_height="2dp"
        android:background="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContactD" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbAddGuest"
        android:layout_width="416dp"
        android:layout_height="51dp"
        android:background="@color/purple"
        android:minHeight="?attr/actionBarSize"
        android:onClick="BackToViewGuest"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/abc_vector_test"
        app:title="@string/toolbar_add_guest"
        app:titleTextColor="@android:color/background_light" />

    <TextView
        android:id="@+id/tvguestD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textView_guest"
        android:textColor="@color/purple"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbAddGuest" />

    <TextView
        android:id="@+id/tvContactD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textView_guest_contact"
        android:textColor="@color/purple"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioInvitation" />

    <View
        android:id="@+id/divider03"
        android:layout_width="385dp"
        android:layout_height="2dp"
        android:background="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvguestD" />

    <TextView
        android:id="@+id/tvNm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/name_g"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider03" />

    <EditText
        android:id="@+id/etGuestName"
        android:layout_width="365dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/name_g"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNm" />

    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="246dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGuestName">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:button="@android:drawable/btn_radio"
            android:buttonTint="@color/purple"
            android:buttonTintMode="multiply"
            android:checked="true"
            android:foregroundTint="@color/purple"
            android:shadowColor="@color/design_default_color_error"
            android:text="@string/male"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.084"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.383" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="121dp"
            android:layout_height="37dp"
            android:button="@android:drawable/btn_radio"
            android:buttonTint="@color/purple"
            android:buttonTintMode="multiply"
            android:text="@string/female"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.381" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioAge"
        android:layout_width="223dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGender">


        <RadioButton
            android:id="@+id/radioAdult"
            android:layout_width="116dp"
            android:layout_height="40dp"
            android:button="@android:drawable/btn_radio"
            android:buttonTint="@color/purple"
            android:buttonTintMode="multiply"
            android:checked="true"
            android:text="@string/adult"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.084"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.383" />

        <RadioButton
            android:id="@+id/radioChild"
            android:layout_width="99dp"
            android:layout_height="40dp"
            android:button="@android:drawable/btn_radio"
            android:buttonTint="@color/purple"
            android:buttonTintMode="multiply"
            android:text="@string/child"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.381" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioInvitation"
        android:layout_width="384dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioAge">

        <RadioButton
            android:id="@+id/radioSent"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:button="@android:drawable/btn_radio"
            android:buttonTint="@color/purple"
            android:buttonTintMode="multiply"
            android:checked="true"
            android:text="@string/invitation_sent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.084"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.383" />

        <RadioButton
            android:id="@+id/radioNotsent"
            android:layout_width="205dp"
            android:layout_height="41dp"
            android:button="@android:drawable/btn_radio"
            android:buttonTint="@color/purple"
            android:buttonTintMode="multiply"
            android:text="@string/Invitation_n_sent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.381" />

    </RadioGroup>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/phonenumber"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toEndOf="@+id/ivPhone"
        app:layout_constraintTop_toBottomOf="@+id/divider02" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/address_g"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toEndOf="@+id/ivAddress"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <ImageView
        android:id="@+id/ivPhone"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider02"
        app:srcCompat="@android:drawable/stat_sys_phone_call" />

    <ImageView
        android:id="@+id/ivAddress"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@color/purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivEmail"
        app:srcCompat="@android:drawable/ic_dialog_map" />

    <Button
        android:id="@+id/addguestbutton"
        android:layout_width="120dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:background="@color/purple"
        android:onClick="handleClick"
        android:text="@string/save"
        android:textColor="@color/design_default_color_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddress" />

    <ImageButton
        android:id="@+id/ibtn_addcom"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="196dp"
        android:backgroundTint="@color/purple"
        android:onClick="handleClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addguestbutton"
        app:srcCompat="@drawable/ic_baseline_add_24" />


</androidx.constraintlayout.widget.ConstraintLayout>
